# athanor

./: .env.example  .gitignore  BUILDLOG.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
athanor/: __init__.py  __main__.py  cli.py  config.py  llm_utils.py  pipeline.py  reporting.py
athanor/domains/: __init__.py
athanor/embed/: __init__.py  embedder.py
athanor/gaps/: __init__.py  dedup.py  finder.py  models.py
athanor/graph/: __init__.py  builder.py  extractor.py  gaps.py  models.py
athanor/hypotheses/: __init__.py  critic.py  generator.py  models.py
athanor/ingest/: __init__.py  arxiv_client.py  cocitation.py  parser.py  pdf.py  semantic_scholar.py
athanor/viz/: __init__.py  visualizer.py
domains/: __init__.py  information_theory.yaml  longevity_biology.yaml  quantum_computing.yaml  string_landscape.yaml  synthetic_biology.yaml
notebooks/: stage1_literature_mapper.ipynb  stage2_gap_finder.ipynb  stage3_hypothesis_generator.ipynb
outputs/gaps/athanor_meta/: gap_report.json
outputs/gaps/longevity_biology/: gap_report.json
outputs/gaps/quantum_computing/: gap_report.json
outputs/gaps/string_landscape/: gap_report.json
outputs/graphs/athanor_meta/: candidate_gaps.json  concept_graph.json
outputs/graphs/information_theory/: concept_graph.json
outputs/graphs/longevity_biology/: candidate_gaps.json  concept_graph.json
outputs/graphs/string_landscape/: candidate_gaps.json
outputs/graphs/synthetic_biology/: candidate_gaps.json  concept_graph.json
outputs/hypotheses/string_landscape/: hypothesis_report.json
tests/: conftest.py  test_cli.py  test_dedup_norm.py  test_ingest.py  test_llm_utils.py  test_models.py  test_parser.py  test_pipeline_utils.py  test_reporting.py
workspaces/: README.md
workspaces/longevity/outputs/hypotheses/longevity_biology/: hypothesis_report.json
workspaces/sandbox/domains/: information_theory.yaml
workspaces/sandbox/outputs/gaps/information_theory/: gap_report.json
workspaces/sandbox/outputs/gaps/synthetic_biology/: gap_report.json
workspaces/sandbox/outputs/graphs/information_theory/: candidate_gaps.json
workspaces/sandbox/outputs/graphs/quantum_computing/: candidate_gaps.json  (+1 more)
workspaces/string_physics/: RESEARCH_DIRECTIONS.md  TOP_10_RESEARCH_DIRECTIONS.md
workspaces/string_physics/domains/: athanor_meta.yaml  cy3_discrete_symmetry.yaml  cy3_machine_learning.yaml  cy_discrete_symmetries.yaml  moduli_periods.yaml  sm_vacuum_selection.yaml
(+58 files in other folders)
