[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "athanor"
version = "0.1.0"
description = "Domain-agnostic automated science infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "arxiv>=2.1.0",
    "networkx>=3.3",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "pypdf>=4.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "pyvis>=0.3.2",
    "plotly>=5.23.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "scikit-learn>=1.5.0",
]

[project.scripts]
athanor = "athanor.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["athanor*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary instead of if-else (readability)
]

[tool.ruff.lint.isort]
known-first-party = ["athanor"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false       # gradual adoption
ignore_missing_imports = true       # third-party stubs not yet added
exclude = ["notebooks/", "workspaces/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
